15.network-policies/busybox-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-pod
spec:
   containers:
      - image: radial/busyboxplus:curl
        name: busybox
        command:
          - 'sh'
          - '-c'
          - 'echo hello && sleep 3600'
