15.network-policies/allow-http-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-http-traffic
spec:
  podSelector: { }
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 80
          protocol: TCP
